--- a/views/home.ejs
+++ b/views/home.ejs
@@ -35,6 +35,7 @@
                 Feel free to share some of your own and comment on others!</p>
             <a href="/campgrounds" class="btn btn-lg btn-secondary font-weight-bold border-white bg-white">View
                 Campgrounds</a>
+            <a href="/author" class="btn btn-lg btn-secondary font-weight-bold border-white bg-white">Author</a>
         </main>
 
         <footer class="mt-auto text-white-50">
