adding author and links to small sections

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -33,9 +33,11 @@
             <h1>YelpCamp</h1>
             <p class="lead"> Welcome to YelpCamp! <br> Jump right in and explore our many campgrounds. <br>
                 Feel free to share some of your own and comment on others!</p>
-            <a href="/campgrounds" class="btn btn-lg btn-secondary font-weight-bold border-white bg-white">View
+            <a href="/campgrounds" class="btn btn-lg btn-secondary font-weight-bold border-white bg-white mb-3">View
                 Campgrounds</a>
-            <a href="/author" class="btn btn-lg btn-secondary font-weight-bold border-white bg-white">Author</a>
+            <br>
+            <a href="/author" class="btn btn-lg btn-secondary font-weight-bold border-white bg-white">Author
+                Information</a>
         </main>
 
         <footer class="mt-auto text-white-50">
