--- a/views/author/general.ejs
+++ b/views/author/general.ejs
@@ -3,12 +3,12 @@
         <div class="col-md-3 offset-1">
             <div class="card mb-3">
                 <img class="img-fluid w-100 mt-1"
-                    src="https://res.cloudinary.com/ntv2806/image/upload/v1663439526/YelpCamp/Ph%C3%B4ng_tr%E1%BA%AFng_fzchhs.jpg"
+                    src="https://res.cloudinary.com/ntv2806/image/upload/v1663542432/YelpCamp/qkatbwkoy6f7cdpc5bht.jpg"
                     alt="">
 
                 <div class="card-body">
                     <h5 class="card-title">
-                        Nguyen Thanh Vinh (20)
+                        Nguyen Thanh Vinh
                     </h5>
                     <p class="card-text">
                     </p>
