--- a/views/author/interest.ejs
+++ b/views/author/interest.ejs
@@ -1,1 +1,114 @@
 <% layout('layouts/boilerplate') %>
+    <div class="row">
+        <div class="col-md-4">
+            <div class="card mb-3">
+                <div id="campgroundCarousel" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="https://res.cloudinary.com/ntv2806/image/upload/v1663556666/YelpCamp/e11ojqoaxspgkkuxdb0f.jpg"
+                                class="d-block w-100" alt="">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="https://res.cloudinary.com/ntv2806/image/upload/v1663556666/YelpCamp/unnfn3jhijzzevnndm1o.jpg"
+                                class="d-block w-100" alt="">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="https://res.cloudinary.com/ntv2806/image/upload/v1663556666/YelpCamp/v3l5webyy1vdpphngwqx.jpg"
+                                class="d-block w-100" alt="">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="https://res.cloudinary.com/ntv2806/image/upload/v1663556666/YelpCamp/buxmikf53hqfhkbmihj0.jpg"
+                                class="d-block w-100" alt="">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="https://res.cloudinary.com/ntv2806/image/upload/v1663556666/YelpCamp/ptyvc4kar646nb3vaw1p.jpg"
+                                class="d-block w-100" alt="">
+                        </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#campgroundCarousel"
+                        data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#campgroundCarousel"
+                        data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
+                </div>
+                <div class="card-body">
+                    <h5 class="card-title">
+                        Football
+                    </h5>
+                    <p class="card-text">
+                    </p>
+                </div>
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item">
+                        Position: Striker
+                    </li>
+                    <li class="list-group-item">
+                        Team: StarlakeFC
+                    </li>
+                    <li class="list-group-item">
+                        Achievement: Gold medal in Starlake's tournament
+                    </li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="col-md-6 offset-2">
+            <div class="card mb-3">
+                <div id="lol" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="https://res.cloudinary.com/ntv2806/image/upload/v1663558147/YelpCamp/mzljygdy58gncmkufawy.png"
+                                class="d-block w-100" alt="">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="https://res.cloudinary.com/ntv2806/image/upload/v1663558147/YelpCamp/ifdec9m7o98ia7j62pbx.png"
+                                class="d-block w-100" alt="">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="https://res.cloudinary.com/ntv2806/image/upload/v1663558147/YelpCamp/stgoofqdisklw9mbzpmo.png"
+                                class="d-block w-100" alt="">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="https://res.cloudinary.com/ntv2806/image/upload/v1663558147/YelpCamp/ub0nqn81qqazcjmjv4cr.png"
+                                class="d-block w-100" alt="">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="https://res.cloudinary.com/ntv2806/image/upload/v1663558147/YelpCamp/zxaiizfvc90fiucr6k0s.png"
+                                class="d-block w-100" alt="">
+                        </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#lol" data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#lol" data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
+                </div>
+                <div class="card-body">
+                    <h5 class="card-title">
+                        League of Legend
+                    </h5>
+                    <p class="card-text">
+                    </p>
+                </div>
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item">
+                        Position: Top/Mid
+                    </li>
+                    <li class="list-group-item">
+                        Highest rank: Gold
+                    </li>
+                    <li class="list-group-item">
+                        Best champions: Aatrox, Irelia, Yasuo
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
