--- a/views/author/college.ejs
+++ b/views/author/college.ejs
@@ -33,7 +33,7 @@
                         <span class="visually-hidden">Next</span>
                     </button>
                 </div>
-                <div class="card-body">
+                <div class="card-body bg-dark text-white border-light">
                     <h5 class="card-title">
                         University of Rochester
                     </h5>
@@ -41,13 +41,13 @@
                     </p>
                 </div>
                 <ul class="list-group list-group-flush">
-                    <li class="list-group-item">
+                    <li class="list-group-item bg-dark text-white border-light">
                         Location: Rochester, New York
                     </li>
-                    <li class="list-group-item">
+                    <li class="list-group-item bg-dark text-white border-light">
                         Ranking: #34 NU
                     </li>
-                    <li class="list-group-item">
+                    <li class="list-group-item bg-dark text-white border-light">
                         Acceptance rate: 35%
                     </li>
                 </ul>
