--- a/views/author/general.ejs
+++ b/views/author/general.ejs
@@ -6,8 +6,8 @@
                     src="https://res.cloudinary.com/ntv2806/image/upload/v1663542432/YelpCamp/qkatbwkoy6f7cdpc5bht.jpg"
                     alt="">
 
-                <div class="card-body">
-                    <h5 class="card-title">
+                <div class="card-body bg-dark text-white border-light">
+                    <h5 class="card-title text-center">
                         Nguyen Thanh Vinh
                     </h5>
                     <p class="card-text">
@@ -30,7 +30,7 @@
         <div class="col-md-6 offset-1">
 
             <div class="row-md-1">
-                <div class="card mb-3">
+                <div class="card mb-3 bg-dark text-white border-light">
                     <div class="card-body">
                         <h5 class="card-title">
                             About me
@@ -51,7 +51,7 @@
 
             <div class="row-md-1">
                 <div class="card mb-3">
-                    <div class="card-body">
+                    <div class="card-body bg-dark text-white border-light">
                         <h5 class="card-title">
                             Education
                         </h5>
@@ -70,7 +70,7 @@
             </div>
 
             <div class="row-md-1">
-                <div class="card mb-3">
+                <div class="card mb-3 bg-dark text-white border-light">
                     <div class="card-body">
                         <h5 class="card-title">
                             Experience
@@ -94,7 +94,7 @@
 
             <div class="row-md-1">
                 <div class="card mb-3">
-                    <div class="card-body">
+                    <div class="card-body bg-dark text-white border-light">
                         <h5 class="card-title">
                             Projects
                         </h5>
