--- a/views/author/highschool.ejs
+++ b/views/author/highschool.ejs
@@ -1,7 +1,7 @@
 <% layout('layouts/boilerplate') %>
 
     <div class="row">
-        <div class="col-md-5">
+        <div class="col-md-6">
             <div class="card mb-3">
                 <div id="campgroundCarousel" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
@@ -29,7 +29,7 @@
                         <span class="visually-hidden">Next</span>
                     </button>
                 </div>
-                <div class="card-body">
+                <div class="card-body bg-dark text-white border-light">
                     <h5 class="card-title">
                         Hanoi-Amsterdam high school
                     </h5>
@@ -37,20 +37,20 @@
                     </p>
                 </div>
                 <ul class="list-group list-group-flush">
-                    <li class="list-group-item">
+                    <li class="list-group-item bg-dark text-white border-light">
                         Location: Hanoi, Vietnam
                     </li>
-                    <li class="list-group-item">
+                    <li class="list-group-item bg-dark text-white border-light">
                         Ranking: #1 in Vietnam
                     </li>
-                    <li class="list-group-item">
+                    <li class="list-group-item bg-dark text-white border-light">
                         My major: Computer Science
                     </li>
                 </ul>
             </div>
         </div>
 
-        <div class="col-md-6 offset-1">
+        <div class="col-md-6">
             <h1>Hanoi-Amsterdam high school</h1>
             <h3>Hanoi, Vietnam</h3>
             <div id='map'></div>
