--- a/views/author/info.ejs
+++ b/views/author/info.ejs
@@ -8,37 +8,37 @@
                 class="rounded-circle img-thumbnail" alt="">
         </div>
         <div class="col-md-4">
-            <div class="card mb-3 mt-3">
+            <div class="card mb-3 mt-3 bg-dark border-light">
                 <div class="card-body">
-                    <h5 class="card-title">
+                    <h5 class="card-title text-white">
                         Nguyen Thanh Vinh
                     </h5>
                     <p class="card-text">
                     </p>
                 </div>
                 <ul class="list-group list-group-flush">
-                    <li class="list-group-item">
+                    <li class="list-group-item bg-dark text-white border-light">
                         Date of birth: 28/06/2002
                     </li>
-                    <li class="list-group-item">
+                    <li class="list-group-item bg-dark text-white border-light">
                         Nationality: Vietnamese
                     </li>
-                    <li class="list-group-item">
+                    <li class="list-group-item bg-dark text-white border-light">
                         Education: University of Rochester
                     </li>
-                    <li class="list-group-item">
+                    <li class="list-group-item bg-dark text-white border-light">
                         Occupation: Student
                     </li>
-                    <li class="list-group-item">
+                    <li class="list-group-item bg-dark text-white border-light">
                         Majors: BS Computer Science/ BA Business
                     </li>
-                    <li class="list-group-item">
+                    <li class="list-group-item bg-dark text-white border-light">
                         Height: 190cm (6'2)
                     </li>
-                    <li class="list-group-item">
+                    <li class="list-group-item bg-dark text-white border-light">
                         Hometown: Hanoi, Vietnam
                     </li>
-                    <li class="list-group-item">
+                    <li class="list-group-item bg-dark text-white border-light">
                         Website: <a href="/">YelpCamp</a>
                     </li>
                 </ul>
