--- a/views/author/interest.ejs
+++ b/views/author/interest.ejs
@@ -36,7 +36,7 @@
                         <span class="visually-hidden">Next</span>
                     </button>
                 </div>
-                <div class="card-body">
+                <div class="card-body bg-dark text-white border-light">
                     <h5 class="card-title">
                         Football
                     </h5>
@@ -44,13 +44,13 @@
                     </p>
                 </div>
                 <ul class="list-group list-group-flush">
-                    <li class="list-group-item">
+                    <li class="list-group-item bg-dark text-white border-light">
                         Position: Striker
                     </li>
-                    <li class="list-group-item">
+                    <li class="list-group-item bg-dark text-white border-light">
                         Team: StarlakeFC
                     </li>
-                    <li class="list-group-item">
+                    <li class="list-group-item bg-dark text-white border-light">
                         Achievement: Gold medal in Starlake's tournament
                     </li>
                 </ul>
@@ -91,7 +91,7 @@
                         <span class="visually-hidden">Next</span>
                     </button>
                 </div>
-                <div class="card-body">
+                <div class="card-body bg-dark text-white border-light">
                     <h5 class="card-title">
                         League of Legend
                     </h5>
@@ -99,13 +99,13 @@
                     </p>
                 </div>
                 <ul class="list-group list-group-flush">
-                    <li class="list-group-item">
+                    <li class="list-group-item bg-dark text-white border-light">
                         Position: Top/Mid
                     </li>
-                    <li class="list-group-item">
+                    <li class="list-group-item bg-dark text-white border-light">
                         Highest rank: Gold
                     </li>
-                    <li class="list-group-item">
+                    <li class="list-group-item bg-dark text-white border-light">
                         Best champions: Aatrox, Irelia, Yasuo
                     </li>
                 </ul>
