--- a/views/author/numberpuzzle.ejs
+++ b/views/author/numberpuzzle.ejs
@@ -1,1 +1,62 @@
 <% layout('layouts/boilerplate') %>
+
+    <div class="row">
+        <div class="col-md-2 offset-5 text-center">
+            <div class="card bg-dark border-light">
+                <img src="https://res.cloudinary.com/ntv2806/image/upload/v1663635675/YelpCamp/Icon_ubeouq.png"
+                    class="img-thumbnail mt-2 mb-2 me-2 ms-2" alt="">
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-12 text-center bg-dark mt-3">
+            <h5 class="mt-3 text-white">Number Puzzle</h5>
+            <p class="text-white">This app allows you to play the original 15 numbers puzzle at different setting
+                and difficulties!</p>
+        </div>
+    </div>
+
+    <div class="row bg-dark mt-3">
+        <div class="col-md-3 mt-2 mb-2">
+            <img src="https://res.cloudinary.com/ntv2806/image/upload/v1663635675/YelpCamp/img5_nm5tn2.png"
+                class="d-block w-100" alt="">
+        </div>
+        <div class="col-md-3 mt-2 mb-2">
+            <img src="https://res.cloudinary.com/ntv2806/image/upload/v1663635675/YelpCamp/img4_hjkc1x.png"
+                class="d-block w-100" alt="">
+        </div>
+        <div class="col-md-3 mt-2 mb-2">
+            <img src="https://res.cloudinary.com/ntv2806/image/upload/v1663635675/YelpCamp/img2_bdridz.png"
+                class="d-block w-100" alt="">
+        </div>
+        <div class="col-md-3 mt-2 mb-2">
+            <img src="https://res.cloudinary.com/ntv2806/image/upload/v1663635675/YelpCamp/img3_xmhdfq.png"
+                class="d-block w-100" alt="">
+        </div>
+    </div>
+    <div class="row bg-dark mb-3">
+        <div class="col-md-12 mt-3 mb-3">
+            <div class="card mb-6 border-light bg-dark">
+                <div class="card-body">
+                    <h5 class="card-title text-white">
+                        Name: Number Puzzle
+                    </h5>
+                    <p class="card-text text-white">
+                        Features:
+                    </p>
+                    <p class="text-white"> - Full original number puzzle game with settings allows change of
+                        color</p>
+                    <p class="text-white"> - Three difficulty levels: Easy, Medium, Hard</p>
+                    <p class="text-white"> - Localization in French</p>
+                </div>
+                <ul class="list-group list-group-flush bg-dark">
+                    <li class="list-group-item bg-dark text-white">
+                        Location: Rochester, New York
+                    </li>
+                    <li class="list-group-item bg-dark text-white">
+                        Date: 03/15/2021
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
