--- a/views/author/stocktracker.ejs
+++ b/views/author/stocktracker.ejs
@@ -1,1 +1,62 @@
 <% layout('layouts/boilerplate') %>
+
+    <div class="row">
+        <div class="col-md-2 offset-5 text-center">
+            <div class="card border-light">
+                <img src="https://res.cloudinary.com/ntv2806/image/upload/v1663641020/YelpCamp/Icon_axluf0.png"
+                    class="img-thumbnail" alt="">
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-12 text-center bg-dark mt-3">
+            <h5 class="mt-3 text-white">My Stock Tracker</h5>
+            <p class="text-white">This app allows you to add your stocks to a recycler list and persist it with
+                database!</p>
+        </div>
+    </div>
+
+    <div class="row bg-dark mt-3">
+        <div class="col-md-3 mt-2 mb-2">
+            <img src="https://res.cloudinary.com/ntv2806/image/upload/v1663640896/YelpCamp/img2_rofapf.png"
+                class="d-block w-100" alt="">
+        </div>
+        <div class="col-md-3 mt-2 mb-2">
+            <img src="https://res.cloudinary.com/ntv2806/image/upload/v1663640896/YelpCamp/img1_cu6b7b.png"
+                class="d-block w-100" alt="">
+        </div>
+        <div class="col-md-3 mt-2 mb-2">
+            <img src="https://res.cloudinary.com/ntv2806/image/upload/v1663640896/YelpCamp/img5_hpzdxs.png"
+                class="d-block w-100" alt="">
+        </div>
+        <div class="col-md-3 mt-2 mb-2">
+            <img src="https://res.cloudinary.com/ntv2806/image/upload/v1663640897/YelpCamp/img3_goeuw2.png"
+                class="d-block w-100" alt="">
+        </div>
+    </div>
+    <div class="row bg-dark mb-3">
+        <div class="col-md-12 mt-3 mb-3">
+            <div class="card mb-6 border-light bg-dark">
+                <div class="card-body">
+                    <h5 class="card-title text-white">
+                        Name: My Stock Tracker
+                    </h5>
+                    <p class="card-text text-white">
+                        Features:
+                    </p>
+                    <p class="text-white"> - Recycler view with Card view allow you to add items in a list with full
+                        screen view</p>
+                    <p class="text-white"> - Settings allow you to change colors, notifications, and auto comment</p>
+                    <p class="text-white"> - Localization in French</p>
+                </div>
+                <ul class="list-group list-group-flush bg-dark">
+                    <li class="list-group-item bg-dark text-white">
+                        Location: Rochester, New York
+                    </li>
+                    <li class="list-group-item bg-dark text-white">
+                        Date: 05/15/2021
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
