--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -1,6 +1,6 @@
 <% layout('layouts/boilerplate') %>
     <div class="row">
-        <h1 class="text-center">New Campground</h1>
+        <h1 class="text-center">New Journey</h1>
         <div class="col-md-6 offset-md-3">
             <form action="/campgrounds" method="POST" novalidate class="validated-form" enctype="multipart/form-data">
                 <div class="mb-3">
@@ -19,7 +19,7 @@
                 </div>
 
                 <div class="mb-3">
-                    <label class="form-label" for="price">Campground Price</label>
+                    <label class="form-label" for="price">Price</label>
                     <div class="input-group">
                         <span class="input-group-text" id="price-label">$</span>
                         <input type="text" class="form-control" name="campground[price]" placeholder=" 0.00"
@@ -45,7 +45,7 @@
                 </div>
 
                 <div class="mb-3">
-                    <button class="btn btn-success">Add Campground</button>
+                    <button class="btn btn-success">Add Journey</button>
                 </div>
             </form>
 
