--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>YelpCamp</title>
+    <title>MyJourney</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
@@ -16,10 +16,10 @@
     <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
         <header class="mb-auto">
             <div>
-                <h3 class="float-md-start mb-0">YelpCamp</h3>
+                <h3 class="float-md-start mb-0">MyJourney</h3>
                 <nav class="nav nav-masthead justify-content-center float-md-end">
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
-                    <a class="nav-link" href="/campgrounds">Campgrounds</a>
+                    <a class="nav-link" href="/campgrounds">Explore</a>
                     <% if(!currentUser) { %>
                         <a class="nav-link" href="/login">Login</a>
                         <a class="nav-link" href="/register">Register</a>
@@ -30,14 +30,16 @@
             </div>
         </header>
         <main class="px-4">
-            <h1>YelpCamp</h1>
-            <p class="lead"> Welcome to YelpCamp! <br> Jump right in and explore our many campgrounds. <br>
+            <h1>MyJourney</h1>
+            <p class="lead"> Welcome to MyJourney! <br> Jump right in and explore places I have visited. <br>
                 Feel free to share some of your own and comment on others!</p>
-            <a href="/campgrounds" class="btn btn-lg btn-secondary font-weight-bold border-white bg-white mb-3">View
-                Campgrounds</a>
-            <br>
-            <a href="/author" class="btn btn-lg btn-secondary font-weight-bold border-white bg-white">Author
-                Information</a>
+            <div class="d-grid gap-2 col-4 mx-auto">
+                <a href="/campgrounds"
+                    class="btn btn-lg btn-secondary font-weight-bold border-white bg-white mb-2">Explore
+                    Journeys</a>
+                <a href="/author" class="btn btn-lg btn-secondary font-weight-bold border-white bg-white">Author
+                    Information</a>
+            </div>
         </main>
 
         <footer class="mt-auto text-white-50">
