--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -31,6 +31,9 @@
                                     Description: <%= campground.description %>
                                 </small>
                             </li>
+                            <li class="list-group-item text-white bg-dark border-light">
+                                Price: <%= campground.price %>
+                            </li>
                             <li class="list-group-item text-white bg-dark border-light mt-2">
                                 <a href="/campgrounds/<%= campground._id %> " class="btn btn-primary">View <%=
                                         campground.title %></a>
