--- a/views/author/info.ejs
+++ b/views/author/info.ejs
@@ -11,7 +11,7 @@
             <div class="card mb-3 mt-3 bg-dark border-light">
                 <div class="card-body">
                     <h5 class="card-title text-white">
-                        Nguyen Thanh Vinh
+                        Vinh Thanh Nguyen
                     </h5>
                     <p class="card-text">
                     </p>
@@ -39,7 +39,7 @@
                         Hometown: Hanoi, Vietnam
                     </li>
                     <li class="list-group-item bg-dark text-white border-light">
-                        Website: <a href="/">YelpCamp</a>
+                        Website: <a href="/">MyJourney</a>
                     </li>
                 </ul>
             </div>
