Chnage name again

--- a/views/author/general.ejs
+++ b/views/author/general.ejs
@@ -8,7 +8,7 @@
 
                 <div class="card-body bg-dark text-white border-light">
                     <h5 class="card-title text-center">
-                        Nguyen Thanh Vinh
+                        Vinh Thanh Nguyen
                     </h5>
                     <p class="card-text">
                     </p>
