--- a/views/author/stocktracker.ejs
+++ b/views/author/stocktracker.ejs
@@ -1,7 +1,7 @@
 <% layout('layouts/boilerplate') %>
 
     <div class="row">
-        <div class="col-md-2 offset-5 text-center">
+        <div class="col-md-2 offset-md-5 offset-xs-0 offset-md-0 text-center">
             <div class="card border-light">
                 <img src="https://res.cloudinary.com/ntv2806/image/upload/v1663641020/YelpCamp/Icon_axluf0.png"
                     class="img-thumbnail" alt="">
