--- a/views/home.ejs
+++ b/views/home.ejs
@@ -33,7 +33,7 @@
             <h1>MyJourney</h1>
             <p class="lead"> Welcome to MyJourney! <br> Jump right in and explore places I have visited. <br>
                 Feel free to share some of your own and comment on others!</p>
-            <div class="d-grid gap-2 col-4 mx-auto">
+            <div class="d-grid gap-2 col-sm-4 mx-auto">
                 <a href="/campgrounds"
                     class="btn btn-lg btn-secondary font-weight-bold border-white bg-white mb-2">Explore
                     Journeys</a>
