--- a/views/author/general.ejs
+++ b/views/author/general.ejs
@@ -1,6 +1,6 @@
 <% layout('layouts/boilerplate') %>
     <div class="row">
-        <div class="col-md-3 offset-1">
+        <div class="col-lg-3 offset-md-0 offset-xs-0 offset-sm-0 offset-lg-1">
             <div class="card mb-3">
                 <img class="img-fluid w-100 mt-1"
                     src="https://res.cloudinary.com/ntv2806/image/upload/v1663542432/YelpCamp/qkatbwkoy6f7cdpc5bht.jpg"
@@ -27,7 +27,7 @@
             </div>
         </div>
 
-        <div class="col-md-6 offset-1">
+        <div class="col-md-6 offset-md-3 offset-sm-0 offset-lg-1 offset-xs-0">
 
             <div class="row-md-1">
                 <div class="card mb-3 bg-dark text-white border-light">
