--- a/views/author/info.ejs
+++ b/views/author/info.ejs
@@ -3,7 +3,7 @@
     <br class="mt-5">
     <br class="mt-5">
     <div class="row">
-        <div class="col-md-4 offset-2">
+        <div class="col-md-4 offset-md-2 offset-sm-0 offset-xs-0">
             <img src="https://res.cloudinary.com/ntv2806/image/upload/v1663524759/YelpCamp/dqfsgyd0ft9mpzomxwfh.jpg"
                 class="rounded-circle img-thumbnail" alt="">
         </div>
