--- a/views/author/interest.ejs
+++ b/views/author/interest.ejs
@@ -57,7 +57,7 @@
             </div>
         </div>
 
-        <div class="col-md-6 offset-2">
+        <div class="col-md-6 offset-md-2 offset-sm-0 offset-xs-0">
             <div class="card mb-3">
                 <div id="lol" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
