--- a/views/author/numberpuzzle.ejs
+++ b/views/author/numberpuzzle.ejs
@@ -1,7 +1,7 @@
 <% layout('layouts/boilerplate') %>
 
     <div class="row">
-        <div class="col-md-2 offset-5 text-center">
+        <div class="col-md-2 offset-md-5 offset-xs-0 offset-md-0 text-center">
             <div class="card bg-dark border-light">
                 <img src="https://res.cloudinary.com/ntv2806/image/upload/v1663635675/YelpCamp/Icon_ubeouq.png"
                     class="img-thumbnail mt-2 mb-2 me-2 ms-2" alt="">
